--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -18,5 +18,9 @@
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.4"
+  },
+  "volta": {
+    "node": "14.18.1",
+    "npm": "8.1.0"
   }
 }
