--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "cd .. && husky install react-ui/.husky"
   },
   "dependencies": {
     "next": "11.1.2",
@@ -17,10 +18,17 @@
     "@types/react": "17.0.29",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
+    "prettier": "2.4.1",
     "typescript": "4.4.4"
   },
   "volta": {
     "node": "14.18.1",
     "npm": "8.1.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
