--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.29",
