--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cryptography==3.3.2
 Django==2.2.24
 dj-database-url==0.5.0
 django-allauth==0.39.1
+django-cors-headers==3.10.0
 django-csp==3.5
 django-debug-toolbar==2.2.1
 django-gulp==4.1.0
