--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -10,6 +10,10 @@
     "prepare": "cd .. && husky install react-ui/.husky"
   },
   "dependencies": {
+    "@fluent/bundle": "^0.17.0",
+    "@fluent/langneg": "^0.6.0",
+    "@fluent/react": "^0.14.0",
+    "intl-pluralrules": "^1.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
