--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -17,6 +17,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.43.3",
     "swr": "^1.0.1"
   },
   "devDependencies": {
