--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -16,7 +16,9 @@
     "intl-pluralrules": "^1.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-aria": "^3.10.0",
     "react-dom": "17.0.2",
+    "react-stately": "^3.9.0",
     "sass": "^1.43.3",
     "swr": "^1.0.1"
   },
