--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -14,7 +14,7 @@
     "@fluent/langneg": "^0.6.0",
     "@fluent/react": "^0.14.0",
     "intl-pluralrules": "^1.3.1",
-    "next": "11.1.2",
+    "next": "^12.0.1",
     "react": "17.0.2",
     "react-aria": "^3.10.0",
     "react-dom": "17.0.2",
@@ -34,9 +34,5 @@
   "volta": {
     "node": "14.18.1",
     "npm": "8.1.0"
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
   }
 }
